# new-teamtemp

./: .codeclimate.yml  .coveragerc  .env  .envrc  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  app.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  deploy-e8.yml  deploy-legacy.yml  deploy-rloomans.yml  django-test.yaml  snyk-security.yml  zizmor.yaml
requirements/: base.txt  dev.txt
teamtemp/: urls.py  views.py
teamtemp/responses/: admin.py  forms.py  models.py
teamtemp/responses/migrations/: 0001_initial.py  0002_auto_20160614_2324.py  0008_auto_20161216_1300.py  0009_auto_20161219_1143.py  0010_auto_20161221_1505.py  0029_alter_teamtemperature_default_tz.py  0030_alter_teamtemperature_default_tz.py  0031_alter_teamtemperature_default_tz.py  0032_alter_teamtemperature_default_tz.py  0033_alter_teamtemperature_default_tz.py  0034_alter_wordcloudimage_word_hash.py  0035_alter_teamtemperature_default_tz.py  0036_alter_teamtemperature_default_tz.py  0037_alter_teamtemperature_default_tz.py  0038_alter_teamtemperature_default_tz.py
teamtemp/settings/: base.py  dev.py
teamtemp/static/: style.css  tablesort.min.js
teamtemp/templates/: about.html  base.html  bvc.html  form.html  index.html  password.html  results.html  set.html  team.html  user.html
teamtemp/tests/: factories.py
teamtemp/tests/forms/: test_create_survey_form.py  test_filtered_bvc_form.py  test_survey_response_form.py  test_survey_settings_form.py
teamtemp/tests/models/: test_team_response_history.py  test_team_temperature.py  test_teams.py  test_temperature_response.py  (+1 more)
teamtemp/utils/: ACTHistory.sql  __init__.py  randomkey.py
(+16 files in other folders)
